--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body{
     padding: 0px;
     margin: 0px;
     position: relative;
+    overscroll-behavior-y: contain;
 }
 #container {
     background-color: #212228;
